--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/icons/vscode.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Peter Kwan's personal website: Virtual Story Code. Inspired by Visual Studio Code."
+    />
     <title>virtual-story-code</title>
   </head>
   <body>
