feat: logo updates and consola font remove

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Peter Kwan's personal website: Virtual Story Code. Inspired by Visual Studio Code."
     />
-    <title>virtual-story-code</title>
+    <title>Peter Kwan | virtual-story-code</title>
   </head>
   <body>
     <div id="root"></div>
